New style of buttons, more clean

--- a/src/stylesheets/less/Lungo.widgets.button.less
+++ b/src/stylesheets/less/Lungo.widgets.button.less
@@ -16,15 +16,12 @@ a.button {
 	color: #fff !important;
 	outline: none;
 	.user-select(none);
-	.border-radius(2px);
-	
-	background: #2c2c2d;
-	
-	font-size: 1.0em;
+	.border-radius(1px);
+	background: #5a5a5a;
 	font-weight: bold !important;
 	line-height: 32px;
 	text-align: center; 
-	text-decoration: none;	
+	text-decoration: none;
 }
 
 a.button:disabled, a.button.disabled {
@@ -35,10 +32,10 @@ a.button:disabled, a.button.disabled {
 a.button .icon{ 
 	float: left;
 	width: 17px;
-	
-	font-size: 1.5em; 
+	height: 30px;	
 	font-weight: normal;
-	line-height: 32px;}
+	font-size: 1.5em;
+	line-height: 31px;}
 	
 a.button.big { 
 	position: relative; 
