--- a/src/stylesheets/css/Lungo.theme.default.css
+++ b/src/stylesheets/css/Lungo.theme.default.css
@@ -47,12 +47,15 @@ article .title {
 /* @end */
 /* @group <nav> */
 nav a {
-  color: rgba(0, 0, 0, 0.5);
+  color: rgba(255, 255, 255, 0.5);
 }
-nav a.current {
+nav a.current, nav a:active {
   color: #ffffff;
 }
-.toolbar a.current {
+.toolbar a {
+  color: rgba(255, 255, 255, 0.2);
+}
+.toolbar a.current, .toolbar nav a:active {
   background: #1c1c1c;
   box-shadow: inset 0px 0px 8px #101010;
   text-shadow: 0px 1px 4px #000;
@@ -148,10 +151,10 @@ aside ~ article {
 }
 /* @group .button */
 a.button {
-  box-shadow: inset 0 1px 0 rgba(34, 57, 100, 0.6), inset 1px 0 0 rgba(34, 57, 100, 0.4), inset -1px 0 0 rgba(34, 57, 100, 0.5), inset 0 -1px 0 rgba(34, 57, 100, 0.6), inset 0 2px 0 rgba(255, 255, 255, 0.2), 0px 1px 0px rgba(255, 255, 255, 0.2);
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), inset 0 -1px 0 rgba(0, 0, 0, 0.3), 0 1px 1px rgba(0, 0, 0, 0.2);
 }
 a.button:active {
-  box-shadow: inset 0 1px 0 rgba(10, 10, 10, 0.5), inset 1px 0 0 rgba(10, 10, 10, 0.3), inset -1px 0 0 rgba(10, 10, 10, 0.4), inset 0 -1px 0 rgba(10, 10, 10, 0.5), inset 0 1px 5px rgba(0, 0, 0, 0.3), 0 1px 0 rgba(255, 255, 255, 0.3);
+  box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.1), inset 0 -1px 0 rgba(0, 0, 0, 0.1), inset 0 0 4px rgba(0, 0, 0, 0.3);
 }
 /* @end */
 /* @group <inputs> */
