BETA: Slider input

--- a/src/stylesheets/less/Lungo.widgets.form.less
+++ b/src/stylesheets/less/Lungo.widgets.form.less
@@ -185,6 +185,45 @@ input[type="checkbox"]:checked + span::after,
 }
 /* @end */
 
+/* @group slider */
+/*
+input[type="range"] {
+	-webkit-appearance:	none;
+	outline: none;
+	height: 3px;
+	border-radius: 1px;
+	position: relative;
+	padding: 0px;
+	margin: 0px;
+	
+	background-color: #c7c7c7;
+	
+	border: 0;
+	cursor: ew-resize;
+}
+	input[type="range"]:active { background-color: #34b7dc; }
+
+input[type="range"]::-webkit-slider-thumb {
+	-webkit-appearance:	none;	
+	position: relative;
+	z-index: 		1;
+
+	width: 12px;
+	height: 12px;
+	
+	border-radius: 6px;
+	background: #34b7dc;
+	box-shadow: inset 0px 0px 1px rgba(0,0,0,0.5);
+	
+}
+	input[type="range"]:hover::-webkit-slider-thumb,
+	input[type="range"]:active::-webkit-slider-thumb {
+		box-shadow: 0px 0px 8px #34b7dc;
+	}
+*/
+/* @end */
+
+
 
 
 @media screen and (-webkit-min-device-pixel-ratio:0) { 
