--- a/src/stylesheets/less/Lungo.widgets.button.less
+++ b/src/stylesheets/less/Lungo.widgets.button.less
@@ -18,7 +18,7 @@ a.button {
 	.user-select(none);
 	.border-radius(1px);
 	background: #5a5a5a;
-	font-weight: bold !important;
+	font-weight: bold;
 	line-height: 32px;
 	text-align: center; 
 	text-decoration: none;
@@ -33,7 +33,6 @@ a.button .icon{
 	float: left;
 	width: 17px;
 	height: 30px;	
-	font-weight: normal;
 	font-size: 1.5em;
 	line-height: 31px;}
 	
