--- a/src/stylesheets/less/Lungo.widgets.form.less
+++ b/src/stylesheets/less/Lungo.widgets.form.less
@@ -10,11 +10,11 @@
 @import "mixins.less";
 
 .form, form {
-	font-size: 0.9em;
 	width: inherit !important;
 }
 
 label {
+	font-size: 0.75em;
     line-height: 27px;
 }
 
@@ -26,6 +26,7 @@ input:not([type=checkbox]), textarea, select {
 	
 	outline: none; 	
 	-webkit-appearance: none;
+	border-radius: 0px;
 	font-size:  14px;
 	
 	font-weight: bold;
