--- a/src/stylesheets/css/Lungo.theme.default.css
+++ b/src/stylesheets/css/Lungo.theme.default.css
@@ -1,3 +1,4 @@
+@import "Lungo.theme.default.font.css";
 /** 
  * Stylesheet
  * 
@@ -20,6 +21,7 @@
 */
 .app {
   background: #000000;
+  font-family: 'Roboto', Helvetica, Arial, sans-serif;
 }
 /* @group <header> & <footer> & <article> */
 header {
@@ -34,11 +36,10 @@ footer {
 }
 .title {
   color: #ffffff;
-  font-size: 1.1em;
-  text-shadow: 0px 1px 0px #07acd0;
+  text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.2);
 }
 article {
-  background-color: #e8e8e8;
+  background-color: #f9f9f9;
 }
 article .title {
   color: #797979;
@@ -90,17 +91,22 @@ aside ~ article {
 /* @end */
 /* @group .list */
 .list, .list li:not(.toolbar) a {
-  color: #333;
+  color: #2a2a2a;
 }
 .list li {
   background: #fff;
-  border-bottom: 1px inset #e6e6e6;
+  border-bottom: 1px inset #e1e1e1;
 }
 .list li:last-child {
   border-bottom: none;
 }
+.list li.selectable:active {
+  background: #93d6e7;
+  color: #1b6777;
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.1);
+}
 .indented ul {
-  border: 1px solid #c5c5c5;
+  border: 1px solid #e1e1e1;
 }
 .list .darker {
   background-color: #2c2c2d;
@@ -116,14 +122,20 @@ aside ~ article {
   text-shadow: 0px 1px 0px #fff;
 }
 .list small, .list .onright:not(.bubble) {
-  color: #999;
+  color: #888;
+}
+.list li.selectable:active small, .list li.selectable:active .onright:not(.bubble) {
+  color: #34bcd7;
+  color: #ffffff;
 }
 .list .tip {
   color: #7a7a7a;
 }
 .list li.anchor {
-  background: #f4f4f4;
-  color: #222;
+  background: #93d6e7;
+  color: #1b6777;
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.1);
+  border: none;
 }
 .list .toolbar {
   border-bottom-color: rgba(0, 0, 0, 0.2);
@@ -145,9 +157,9 @@ aside ~ article {
 /* @end */
 /* @group widgets */
 .splash {
-  background: #05b8e2 -webkit-gradient(linear, left top, left bottom, color-stop(0.1, #05bde9), color-stop(1, #07acd0));
+  background: #07acd0;
   color: #fff;
-  text-shadow: 0px 1px 1px #000;
+  text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.2);
 }
 /* @group .button */
 a.button {
@@ -160,17 +172,17 @@ a.button:active {
 /* @group <inputs> */
 input, textarea, select {
   border: 1px solid #e1e1e1;
-  border-radius: 0px;
   color: #858585;
+  font-family: 'Roboto', Helvetica, Arial, sans-serif;
 }
 input:focus, textarea:focus, select:focus {
   border-color: #05b8e2;
   color: #05b8e2;
 }
 label {
-  font-size: 0.75em;
   color: #05b8e2;
   text-transform: uppercase;
+  font-weight: bold;
 }
 .select:after {
   background: #858585;
@@ -184,7 +196,7 @@ input[type="checkbox"] + span::before, input[type="radio"] + span::before {
   background: #c1c1c1;
 }
 input[type="checkbox"]:checked + span, input[type="radio"]:checked + span {
-  background: #29a2c2;
+  background: #07acd0;
 }
 /* @end */
 .bubble {
