--- a/src/stylesheets/less/Lungo.theme.default.less
+++ b/src/stylesheets/less/Lungo.theme.default.less
@@ -237,10 +237,11 @@ input[type="checkbox"] + span, input[type="radio"] + span {
 
 .bubble {
 	color: #fff;
+	.border-radius(2px);
 	text-shadow: none;
-	box-shadow: inset 0px 0px 2px rgba(0,0,0,0.7);
+	font-weight: bold !important;
+	box-shadow: inset 0px 0px 1px rgba(0,0,0,01);
 }	
-	header .bubble.count {background: @secondary-color;
-}
+	header .bubble.count {background: @secondary-color;}
 	.bubble.count { background: @master-color; }
 /* @end */
