--- a/src/stylesheets/less/Lungo.widgets.form.less
+++ b/src/stylesheets/less/Lungo.widgets.form.less
@@ -36,23 +36,24 @@ input:not([type=checkbox]), textarea, select {
 /* @group search */
 input[type=search] {
 	width: 86%;
-}
-	input[type=search] + .button {
-	    float: right;
+	
+	& + .button {
+    	float: right;
 	    padding: 0px;
 	    width: 32px;
 	    height: 30px;
+	    
+	    & .icon {
+    		font-size: 22px !important;	    
+	    	line-height: 30px;
+		}    
 	}
-	input[type=search] + .button .icon{
-	    font-size: 22px !important;	    
-	    line-height: 30px;
-	}
+}
 /* @end */
 
-select{ 
+select { 
 	width: 100%;
 }
-
 
 label.select {
     position: relative;
@@ -223,9 +224,6 @@ input[type="range"]::-webkit-slider-thumb {
 	}
 */
 /* @end */
-
-
-
 
 @media screen and (-webkit-min-device-pixel-ratio:0) { 
 	.custom-select select {padding-right:30px;}
