--- a/src/stylesheets/less/Lungo.widgets.form.less
+++ b/src/stylesheets/less/Lungo.widgets.form.less
@@ -14,7 +14,7 @@
 }
 
 label {
-	font-size: 0.75em;
+	font-size: 0.8em;
     line-height: 27px;
 }
 
@@ -27,10 +27,9 @@ input:not([type=checkbox]), textarea, select {
 	outline: none; 	
 	-webkit-appearance: none;
 	border-radius: 0px;
-	font-size:  14px;
-	
+	font-size:  15px;
+	line-height: 15px;
 	font-weight: bold;
-	line-height: 1.25em;
 }
 
 /* @group search */
