--- a/src/stylesheets/less/Lungo.layout.list.less
+++ b/src/stylesheets/less/Lungo.layout.list.less
@@ -12,27 +12,30 @@
 .list {
     width: inherit;
     font-size: 1.15em;
-    //line-height: 1.15em;
-}
-	.list li:not(.toolbar) {
+    
+    & a {  
+    	display: block; 
+    }
+    
+    & li:not(.toolbar) {
 		padding: 8px 6px 8px 8px;
 		list-style-type: none;
+		
+		& .icon, & img {
+			float: left;
+			width: 32px;
+			height: 32px;
+			margin-right: 6px;	
+			font-size: 36px;
+			font-weight: normal;
+		}
 	}
-	
-	.list a {
-	    display: block;
+    
+	& .icon, & img { 
+		display: inline-block; 
 	}
-	
-	.list li:not(.toolbar) .icon, .list li:not(.toolbar) img {
-		float: left;
-		width: 32px;
-		height: 32px;
-		margin-right: 6px;	
-		font-size: 36px;
-		font-weight: normal;
-	}
-	
-	.list small {
+    
+    & small {
 		display: block;
 		overflow: hidden;  
 		white-space: nowrap;
@@ -40,20 +43,11 @@
 		font-size: 0.85em;
 	}
 	
-	.list .icon {
-	    display: inline-block;
-	}
-	
-	.list .tip {
-    	font-size: 0.85em;
-    	font-weight: bold;
-	}
-
-	.list li.anchor { 	
-		font-size: 0.8em;
+	& li.anchor { 	
+		font-size: 0.85em;
 		padding: 4px 4px 3px;
-	}
-		.list .anchor .icon {
+
+		& .icon {
 			width: 14px !important;
 			height: 14px !important;	
 			margin-right: 2px !important; 	
@@ -61,40 +55,43 @@
 			line-height: 14px !important;	
 		}
 
-		.list .anchor .bubble { display: none; }
-/* @end */
-
-/* @group .search */
-.list .search input {
-	width: 88%;
-}
-
-.list .search a {
-	float: right;
-	height: 30px;
-	margin: 0px;
-	padding: 0px;
-}
-
-.list .search a .icon {
-	height: 12px;
-	width: 30px;
-	margin: 0px;
-	font-size: 1.2em;
-	font-weight: normal;
-}
-/* @end */
-
-/* @group .onright */
-.list .onright {
-	font-size: 0.75em;
-	line-height: 16px;
-}
-	.list .onright .icon, .list small .icon {
-    	font-size: 1.4em !important;
-    	line-height: 16px;
-    	height: 14px !important;
-    	width: 14px !important;
-    	margin-right: 0px !important;
+		& .bubble { display: none; }
     }
-/* @end */
+	
+	& .tip {
+    	font-size: 0.85em;
+    	font-weight: bold;
+	}
+		
+	& .search {
+		& input { width: 88%; }
+		
+		& a {
+			float: right;
+			height: 30px;
+			margin: 0px;
+			padding: 0px;
+			
+			& icon {
+			    height: 12px;
+				width: 30px;
+				margin: 0px;
+				font-size: 1.2em;
+				font-weight: normal;			
+			}
+		}
+	}
+	
+	& .onright {
+		font-size: 0.75em;
+		line-height: 16px;
+	}
+	
+	& .onright .icon, & small .icon {
+	    font-size: 1.4em !important;
+	    line-height: 16px;
+	    height: 14px !important;
+	    width: 14px !important;
+	   	margin-right: 0px !important;
+	}	
+}
