--- a/src/stylesheets/css/Lungo.base.css
+++ b/src/stylesheets/css/Lungo.base.css
@@ -2,9 +2,9 @@ a,abbr,address,article,aside,audio,b,blockquote,body,caption,cite,code,dd,del,df
 a{color:#fff;text-decoration:none;-webkit-tap-highlight-color:rgba(0, 0, 0, 0);}
 a:hover{opacity:1;}
 html{height:100%;font-size:100%;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;}
-body{margin:0;padding:0;width:100%;height:100%;min-height:100%;overflow:hidden;-webkit-touch-callout:none;-webkit-tap-highlight-color:rgba(0, 0, 0, 0);font-family:Helvetica,Arial,sans-serif;font-size:13px;line-height:1.231;}
+body{margin:0;padding:0;width:100%;height:100%;min-height:100%;overflow:hidden;font-family:Helvetica,Arial,sans-serif;font-size:13px;line-height:1.231;-webkit-touch-callout:none;display:-webkit-box;-webkit-box-orient:vertical;-webkit-box-align:stretch;}
 b,strong{font-weight:bold;}
 img{border:0;-ms-interpolation-mode:bicubic;vertical-align:middle;font-size:0;}
 table{border-collapse:collapse;border-spacing:0;}
 th,td,caption{vertical-align:top;font-weight:normal;text-align:left;}
-*{margin:0;padding:0;}
+*{margin:0;padding:0;-webkit-user-select:none;-webkit-tap-highlight-color:rgba(255, 255, 255, 0);}
