--- a/src/stylesheets/less/Lungo.base.less
+++ b/src/stylesheets/less/Lungo.base.less
@@ -106,12 +106,15 @@ body {
     min-height: 100%;
     
     overflow: hidden;
-    -webkit-touch-callout: none;
-    -webkit-tap-highlight-color: rgba(0,0,0,0);
     
     font-family: Helvetica, Arial, sans-serif;
 	font-size: 13px; 
 	line-height: 1.231;
+	
+	-webkit-touch-callout: none;
+	display: -webkit-box;
+    -webkit-box-orient: vertical;
+	-webkit-box-align: stretch;
 }
 
 b,
@@ -143,4 +146,7 @@ caption {
 * {
     margin: 0;
     padding: 0;
+    
+    -webkit-user-select: none; 
+	-webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 }
